@@ -862,6 +862,8 @@ defaultParams = {
     'ps.usedistiller'   : [ False, validate_ps_distiller],  # use ghostscript or xpdf to distill ps output
     'ps.distiller.res'  : [6000, validate_int],       # dpi
     'pdf.compression'   : [6, validate_int],            # compression level from 0 to 9; 0 to disable
+    'svg.image_inline'  : [True, validate_bool],        # write raster image data directly into the svg file
+    'svg.image_noscale'  : [False, validate_bool],        # suppress scaling of raster data embedded in SVG
     'plugins.directory' : ['.matplotlib_plugins', str], # where plugin directory is locate
 
     # mathtext settings
