@@ -235,6 +235,10 @@ ps.distiller.res  : 6000      # dpi
 pdf.compression   : 6 # integer from 0 to 9
 		      # 0 disables compression (good for debugging)
 
+# svg backend params
+svg.image_inline : True       # write raster image data directly into the svg file
+svg.image_noscale : False     # suppress scaling of raster data embedded in SVG
+
 # Set the verbose flags.  This controls how much information
 # matplotlib gives you at runtime and where it goes.  Ther verbosity
 # levels are: silent, helpful, debug, debug-annoying.  Any level is
