@@ -1,3 +1,8 @@
+2006-09-29 added two options to matplotlibrc:
+	   svg.image_inline
+	   svg.image_noscale
+	   see patch #1533010 for details
+
 2006-09-29 axes.py: cleaned up kwargs checking
 
 2006-09-29 setup.py: cleaned up setup logic - NN
